--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -109,7 +109,7 @@
 
 }
 
-@media (max-width: 400) {
+@media (max-width: 400px) {
   .contact-page {
   text-align: center;
   /* margin:var(--space-md) auto; */
